# XFoilFOAM

./: .dockerignore  .env.example  .env.remote-solver.example  .gitignore  AGENTS.md  CompletionLedger.md  DecisionHistory.md  HANDOVER.md  LICENSE  README.md  design-qa.md  docker-compose.deploy.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.codex/: dev-runtime.json
DecisionDetails/: D-2026-07-14-auto-job-admission.md  D-2026-07-14-campaign-capacity.md  D-2026-07-14-no-shedding-preliminary-urans.md  D-2026-07-15-campaign-instrument-overview.md  D-2026-07-15-disk-admission.md  D-2026-07-15-gcs-zstd-evidence.md  D-2026-07-15-multi-engine-identity.md  D-2026-07-15-opencfd-2606-cutover.md  D-2026-07-15-precalc-physical-attempt-budget.md  D-2026-07-16-campaign-cell-evidence-dialog.md  D-2026-07-16-campaign-native-remote-claims.md  D-2026-07-16-preliminary-urans-reliability.md  D-2026-07-16-remote-terminal-handoff.md  D-2026-07-17-canary-database-ack.md  D-2026-07-17-hz-solver2-volume-cutover.md  D-2026-07-17-remote-engine-identity-fence.md  D-2026-07-17-remote-polar-parallel-admission.md  D-2026-07-17-remote-rollout-preservation.md  D-2026-07-18-incomplete-evidence-quarantine.md  D-2026-07-18-operational-canary-evidence-retention.md  D-2026-07-19-urans-physical-tail.md  D-2026-07-20-urans-continuation-wall-budget.md  D-2026-07-22-remote-capacity-and-promise-caps.md  D-2026-07-23-public-polar-repeatability.md  D-2026-07-24-route-owned-responsive-navigation.md  D-2026-07-24-urans-clean-tail.md
(+444 files in other folders)
